packages/cs-client/src/components/cs-app/cs-app.css
.cstabs {
  margin-top: 0px;
}

.cs-navigation-tabbar .tabs__bar
{
  background-color: transparent !important
}

.menu {
  background-color: red;
}

.app-menu{
  color: red !important
  /** margin-left:5px; */
}

.header-title-container {
  margin-left: 16px;
}

@media only screen and (max-width: 480px) {
  .header-breadcrumbs {
    display: none !important;
  }
}

.sidebar {
  z-index:200 !important;
}

.header-breadcrumbs {
  padding: 0 !important;
}

.breadcrumbs__item {
  color:hsla(0,0%,100%,.5);
}

.header-breadcrumbs>li {
  padding: 0 !important;
}

.header-title {
  margin-left: 0 !important;
}

.floating {
  margin-top: -48px !important;
}

.leftsidebar-pin {
  float: right;
  margin: 4px;
}

.leftsidebar-minify {
  position: absolute;
  right: 4px;
  bottom: 5px;
}

.content--wrap {
  height: 100%;
}

.floating-toolbar {
  margin-top: 10px !important;
}

.app-project-logo {
  height: 40px;
  margin: 4px;
}

.content {
  height: 100%;
  padding: 0;
}

